fix: overflow

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -419,7 +419,6 @@ body {
       pointer-events: none;
       opacity: 1;
 
-      overflow: hidden;
       height: 100%;
       max-height: 0px;
 
